tests/baselines/reference/taggedTemplateStringsWithTypeErrorInFunctionExpressionsInSubstitutionExpressionES6.errors.txt
taggedTemplateStringsWithTypeErrorInFunctionExpressionsInSubstitutionExpressionES6.ts(4,31): error TS2322: Type 'string' is not assignable to type 'number'.


==== taggedTemplateStringsWithTypeErrorInFunctionExpressionsInSubstitutionExpressionES6.ts (1 errors) ====
    function foo(...rest: any[]) {
    }
    
    foo `${function (x: number) { x = "bad"; } }`;
                                  ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.